--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -1,11 +1,3 @@
-<!--<article class="images">
-  <section class="slideshow" id="slideshow_test">
-    <div data-u="slides" class="slideshow">
-      <div></div>
-    </div>
-  </section>
-</article>
--->
 <article>
   <section>
     <img src="/assets/content/truck_rear_underride_guard_cropped.jpg" alt="Photo of the rear of a truck from the side, showing the metal bars that form the underride guard at the back of the truck.">
@@ -16,37 +8,53 @@
     <ul>
       <li>The underride guards don't always stop cars from going under the truck.</li>
       <li>Even at low speeds cars can end up under there!</li>
-      <li>Death of family members is a common result to such crashes.</li>
+      <li><strong>Death</strong> of family members is a common result to such crashes.</li>
     </ul>
     <blockquote>
-      <p>“It is safer to run into a brick wall then the back of a truck.”</p>
+      <p><strong>“It is safer to run into a brick wall then the back of a truck.”</strong></p>
       <p>~Insurance Institute for Highway Safety</p>
     </blockquote>
-    <p>In 2013, our family found that out the hard way. I was traveling with my 3 youngest children when we were struck from behind by a semi-truck. It spun us around and hit us a second time pushing our car under the truck in front of us.</p>
   </section>
 </article>
 <article class="images">
   <section>
     <img src="/assets/content/car_under_truck_800.jpg" alt="Photo of our blue Ford Crown Victoria car, with the rear of the car forced under the back of the truck trailer from the collision. Most of the car is nearly unrecognizable from the damage There is a sheet covering part of the car. There is blood on the sheet.">
+   <p class="caption">Our car after the crash</p>
   </section>
 </article>
+<article>
+  <section>
+    <p>In 2013, our family found that out the hard way. I was traveling with my 3 youngest children when we were struck from behind by a semi-truck. It spun us around and hit us a second time pushing our car under the truck in front of us.</p>
+  </section>
+</article>
+<!--<article class="images">
+  <section class="slideshow" id="slideshow_test">
+    <div data-u="slides" class="slideshow">
+      <div></div>
+    </div>
+  </section>
+</article>
+-->
 <article>
   <section>
     <p>AnnaLeah (17) and Mary (13) were in the backseat when the rear of the car was pushed under the truck. Both of them died. AnnaLeah wanted to be a writer and Mary wanted to be famous, neither of them got to see their dreams come true.</p>
   </section>
 </article>
+<article class="video">
+  <iframe width="420" height="315" src="https://www.youtube.com/embed/dGXR02wkjvM" frameborder="0" allowfullscreen></iframe>
+</article>
 <article>
   <section>
     <h1>Lives CAN BE Saved!</h1>
     <p>Last year our family was successful in collecting and delivering more than 11,000 signatures in a petition to the Department of Transportation to make changes. Progress is being made toward stricter laws, but the industry needs better options.</p>
-    <p>Research must be done to offer the trucking industry affordable technologies that protect our families on the road.</p>
+    <p><strong><em>Research must be done to offer the trucking industry affordable technologies that protect our families on the road.</em></strong></p>
   </section>
 </article>
 <article>
   <section>
-    <img src="/assets/content/SAFER_Barrier_crash_photo.jpg" alt="Photo of a racecar crashing against a Steel and Foam Energy Reduction barrier at high speed. While the car is damaged, the driver is visibly unharmed.">
-    <p class="caption">Photo courtesy of X</p>
     <p>Our family started AnnaLeah and Mary for Truck Safety, a 501(c)3 non-profit organization, for raising funds for truck safety research. We are starting with underride guards because if the truck in front of us had a guard that prevented our car from going under it, AnnaLeah and Mary would be here today.</p>
+        <img src="/assets/content/SAFER_Barrier_crash_photo.jpg" alt="Photo of a racecar crashing against a Steel and Foam Energy Reduction barrier at high speed. While the car is damaged, the driver is visibly unharmed.">
+    <p class="caption">Photo courtesy of X</p>
     <ul>
       <li>Dean Sicking has saved lives through the SAFER barrier he designed for NASCAR. He is interested in taking this technology and using it in underride guards.</li>
       <li>Other engineers have contacted us over the last year looking to work on underride guards.</li>
@@ -56,13 +64,21 @@
 </article>
 <article>
   <section>
+    <p>"Comments"</p>
+    <p>-- a person</p>
+    <p>"Comments"</p>
+    <p>-- a person</p>
+  </section>
+</article>
+<article>
+  <section>
     <h1>We Can't Do It Alone<br />We Need YOUR Help!</h1>
     <ul>
       <li>Donate today to save lives, prevent injuries, and make the roads safer for all families.</li>
-      <li>Your donation is tax deductible. You will receive a receipt for tax purposes.</li>
+      <li><strong>AnnaLeah &amp; Mary for Truck Safety</strong> is eligible to receive contributions that may be tax deductible for the donor</li>
       <li>Your donation will help fund research that will save lives!</li>
     </ul>
-    <p>It's too late for AnnaLeah and Mary, but with help from people like you we will save lives.</p>
+    <p><strong>It's too late for AnnaLeah and Mary, but with help from people like you we will save lives.</strong></p>
     <p>~The Karth Family</p>
   </section>
 </article>
@@ -70,6 +86,12 @@
   <section>
     <p>If you'd like to donate by check, rather than credit card, please make your payments out to:</p>
 
+  </section>
+</article>
+<article class="retractable start-hidden">
+  <h1 class="noselect">A Common Question?</h1>
+  <section>
+    <p>An answer to your common question</p>
   </section>
 </article>
 <article class="retractable all-hidden" id="disclaimer">
