Added sharing buttons

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -88,6 +88,12 @@
 
   </section>
 </article>
+<article>
+  <section>
+    <h2>Please share and let your friends know!</h2>
+    <%= render 'sharing' %>
+  </section>
+</article>
 <article class="retractable start-hidden">
   <h1 class="noselect">A Common Question?</h1>
   <section>
