--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,8 +32,8 @@
         %a#reveal-disclaimer{ href: "#disclaimer", title: "Show Disclaimer" }
           Disclaimer
         |
-        %a#reveal-privacy{ href: "#privacy-statement", title: "Show Privacy Statement" }
-          Privacy Statement
+        %a#reveal-privacy{ href: "#privacy-statement", title: "Show Privacy Policy" }
+          Privacy Policy
         |
         %a#reveal-terms-of-use{ href: "#terms-of-use", title: "Show Terms of Use" }
           Terms of Use
