--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -404,7 +404,19 @@ main article.images {
 }
 
 main article.images img {
-  box-shadow: inset 0 0 9em -1em #91b6f9, 2px 2px 15px -2px grey;
+  box-shadow: 2px 2px 15px -2px grey;
+}
+
+main article section.slideshow img {
+  max-width:100%;
+  max-height:100%;
+  width: auto;
+  margin-bottom:1em;
+}
+
+main article.images.slideshow {
+  height:100%;
+  overflow: hidden;
 }
 
 section.slideshow {
@@ -413,11 +425,13 @@ section.slideshow {
   top: 0px;
   width: 100%;
   height: 100%;
-  min-height:300px;
+  min-height:390px;
   background:transparent;
   text-align:center;
   margin-left: auto;
   margin-right: auto;
+  /*box-shadow: 2px 2px 15px -2px grey;*/
+  overflow:visible;
 }
 
 section.slideshow div.slideshow {
@@ -430,6 +444,7 @@ section.slideshow div.slideshow {
   height:100%;
   /*min-height:250px;*/
  /* width: 128px;*/
+  overflow:visible;
 }
 
 /* Alternate styles that break the donation box out to the side when the window is big enough. */
@@ -508,9 +523,9 @@ div.return:active { background-color: white; color:purple; }
   body {
 	  background-color: transparent;
   }
-  
+
 main article.donations input.btn {
   border: 1px solid;
 }
-  
+
 }
