--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -31,7 +31,7 @@
   <section class="slideshow" id="slideshow_test">
     <div data-u="slides" class="slideshow">
       <div><img src="/assets/content/annaleah_and_mary_photo_1c.jpg" alt="Photo of AnnaLeah and Mary on a seesaw made out of wagon wheels. Mary is wearing a bright pink jacket and AnnaLeah is wearing a purple sweater. They are smiling."></div>
-      <div><img src="/assets/content/annaleah_and_mary_photo_2_s.jpg" alt="Photo of AnnaLeah and Mary standing next to each other in front of a yellow wall and looking cool. They are both wearing sunglasses. Annaleah is wearing a sparly pearl-colored swater. Mary is wearing a dark purple sweater."></div>
+      <div><img src="/assets/content/annaleah_and_mary_photo_2_s.jpg" alt="Photo of AnnaLeah and Mary standing next to each other in front of a yellow wall and looking cool. They are both wearing sunglasses. Annaleah is wearing a sparkly pearl-colored swater. Mary is wearing a dark purple sweater."></div>
       <div><img src="/assets/content/annaleah_and_mary_photo_3.jpg" alt="Photo of AnnaLeah and Mary in front of a giant fake apple. The sun is in their eyes. Mary is standing in front and smiling at the camera. AnnaLeah is wearing a brown coat and leaning against the giant green leaf on top of the apple."></div>
     </div>
   </section>
