--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -12,7 +12,7 @@
     </ul>
     <blockquote>
       <p><strong>“It is safer to run into a brick wall then the back of a truck.”</strong></p>
-      <p>~Insurance Institute for Highway Safety</p>
+      <cite>Russ Rader, Insurance Institute for Highway Safety<br>May 5, 2014</cite>
     </blockquote>
   </section>
 </article>
@@ -55,7 +55,7 @@
   <section>
     <p>Our family started AnnaLeah and Mary for Truck Safety, a 501(c)3 non-profit organization, for raising funds for truck safety research. We are starting with underride guards because if the truck in front of us had a guard that prevented our car from going under it, AnnaLeah and Mary would be here today.</p>
         <img src="/assets/content/SAFER_Barrier_crash_photo.jpg" alt="Photo of a racecar crashing against a Steel and Foam Energy Reduction barrier at high speed. While the car is damaged, the driver is visibly unharmed.">
-    <p class="caption">Photo courtesy of X</p>
+    <p class="caption">&copy; Dean Sicking, SAFER barrier, used with permission </p>
     <ul>
       <li>Dean Sicking has saved lives through the SAFER barrier he designed for NASCAR. He is interested in taking this technology and using it in underride guards.</li>
       <li>Other engineers have contacted us over the last year looking to work on underride guards.</li>
@@ -79,8 +79,9 @@
       <li><strong>AnnaLeah &amp; Mary for Truck Safety</strong> is eligible to receive contributions that may be tax deductible for the donor</li>
       <li>Your donation will help fund research that will save lives!</li>
     </ul>
+    <img src="/assets/content/GWMemorial_99.jpg" alt="Photo of the Karth Family, from before the crash.">
     <p><strong>It's too late for AnnaLeah and Mary, but with help from people like you we will save lives.</strong></p>
-    <p>~The Karth Family</p>
+    <p>~~The Karth Family</p>
   </section>
 </article>
 <article>
