fix path for rrssb.min.js

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,4 +41,4 @@
       displayDonations();
     %div.return#returntotop
       %p.no-select ⬆
-    %script{:src => "rrssb.min.js"}
+    = javascript_include_tag 'rrssb.min.js'
