fixed declarations in content

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -1,6 +1,6 @@
 <article>
   <section>
-    <img src="/assets/content/truck_rear_underride_guard_cropped.jpg" alt="Photo of the rear of a truck from the side, showing the metal bars that form the underride guard at the back of the truck.">
+    <%= image_tag("content/truck_rear_underride_guard_cropped.jpg", alt: "Photo of the rear of a truck from the side, showing the metal bars that form the underride guard at the back of the truck.") %>
 
     <p>Imagine the back of a semi-truck trailer.</p>
 
@@ -18,7 +18,7 @@
 </article>
 <article class="images">
   <section>
-    <img src="/assets/content/car_under_truck_800.jpg" alt="Photo of our blue Ford Crown Victoria car, with the rear of the car forced under the back of the truck trailer from the collision. Most of the car is nearly unrecognizable from the damage There is a sheet covering part of the car. There is blood on the sheet.">
+    <%= image_tag("content/car_under_truck_800.jpg", alt: "Photo of our blue Ford Crown Victoria car, with the rear of the car forced under the back of the truck trailer from the collision. Most of the car is nearly unrecognizable from the damage There is a sheet covering part of the car. There is blood on the sheet.") %>
    <p class="caption">Our car after the crash</p>
   </section>
 </article>
@@ -30,9 +30,9 @@
 <article class="images slideshow">
   <section class="slideshow" id="slideshow_test">
     <div data-u="slides" class="slideshow">
-      <div><img src="/assets/content/annaleah_and_mary_photo_1c.jpg" alt="Photo of AnnaLeah and Mary on a seesaw made out of wagon wheels. Mary is wearing a bright pink jacket and AnnaLeah is wearing a purple sweater. They are smiling."></div>
-      <div><img src="/assets/content/annaleah_and_mary_photo_2_s.jpg" alt="Photo of AnnaLeah and Mary standing next to each other in front of a yellow wall and looking cool. They are both wearing sunglasses. Annaleah is wearing a sparkly pearl-colored swater. Mary is wearing a dark purple sweater."></div>
-      <div><img src="/assets/content/annaleah_and_mary_photo_3.jpg" alt="Photo of AnnaLeah and Mary in front of a giant fake apple. The sun is in their eyes. Mary is standing in front and smiling at the camera. AnnaLeah is wearing a brown coat and leaning against the giant green leaf on top of the apple."></div>
+      <div><%= image_tag("content/annaleah_and_mary_photo_1c.jpg", alt: "Photo of AnnaLeah and Mary on a seesaw made out of wagon wheels. Mary is wearing a bright pink jacket and AnnaLeah is wearing a purple sweater. They are smiling.") %></div>
+      <div><%= image_tag("content/annaleah_and_mary_photo_2_s.jpg", alt: "Photo of AnnaLeah and Mary standing next to each other in front of a yellow wall and looking cool. They are both wearing sunglasses. Annaleah is wearing a sparkly pearl-colored swater. Mary is wearing a dark purple sweater.") %></div>
+      <div><%= image_tag("/content/annaleah_and_mary_photo_3.jpg", alt: "Photo of AnnaLeah and Mary in front of a giant fake apple. The sun is in their eyes. Mary is standing in front and smiling at the camera. AnnaLeah is wearing a brown coat and leaning against the giant green leaf on top of the apple.") %></div>
     </div>
   </section>
 </article>
@@ -54,7 +54,7 @@
 <article>
   <section>
     <p>Our family started AnnaLeah and Mary for Truck Safety, a 501(c)3 non-profit organization, for raising funds for truck safety research. We are starting with underride guards because if the truck in front of us had a guard that prevented our car from going under it, AnnaLeah and Mary would be here today.</p>
-        <img src="/assets/content/SAFER_Barrier_crash_photo.jpg" alt="Photo of a racecar crashing against a Steel and Foam Energy Reduction barrier at high speed. While the car is damaged, the driver is visibly unharmed.">
+        <%= image_tag("/content/SAFER_Barrier_crash_photo.jpg", alt: "Photo of a racecar crashing against a Steel and Foam Energy Reduction barrier at high speed. While the car is damaged, the driver is visibly unharmed.") %>
     <p class="caption">&copy; Dean Sicking, SAFER barrier, used with permission </p>
     <ul>
       <li>Dean Sicking has saved lives through the SAFER barrier he designed for NASCAR. He is interested in taking this technology and using it in underride guards.</li>
@@ -79,7 +79,7 @@
       <li><strong>AnnaLeah &amp; Mary for Truck Safety</strong> is eligible to receive contributions that may be tax deductible for the donor</li>
       <li>Your donation will help fund research that will save lives!</li>
     </ul>
-    <img src="/assets/content/GWMemorial_99.jpg" alt="Photo of the Karth Family, from before the crash.">
+    <%= image_tag("/content/GWMemorial_99.jpg", alt: "Photo of the Karth Family, from before the crash.") %>
     <p><strong>It's too late for AnnaLeah and Mary, but with help from people like you we will save lives.</strong></p>
     <p>~~The Karth Family</p>
   </section>
