--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -54,7 +54,7 @@
 <article>
   <section>
     <p>Our family started AnnaLeah and Mary for Truck Safety, a 501(c)3 non-profit organization, for raising funds for truck safety research. We are starting with underride guards because if the truck in front of us had a guard that prevented our car from going under it, AnnaLeah and Mary would be here today.</p>
-        <%= image_tag("/content/SAFER_Barrier_crash_photo.jpg", alt: "Photo of a racecar crashing against a Steel and Foam Energy Reduction barrier at high speed. While the car is damaged, the driver is visibly unharmed.") %>
+        <%= image_tag("content/SAFER_Barrier_crash_photo.jpg", alt: "Photo of a racecar crashing against a Steel and Foam Energy Reduction barrier at high speed. While the car is damaged, the driver is visibly unharmed.") %>
     <p class="caption">&copy; Dean Sicking, SAFER barrier, used with permission </p>
     <ul>
       <li>Dean Sicking has saved lives through the SAFER barrier he designed for NASCAR. He is interested in taking this technology and using it in underride guards.</li>
@@ -79,7 +79,7 @@
       <li><strong>AnnaLeah &amp; Mary for Truck Safety</strong> is eligible to receive contributions that may be tax deductible for the donor</li>
       <li>Your donation will help fund research that will save lives!</li>
     </ul>
-    <%= image_tag("/content/GWMemorial_99.jpg", alt: "Photo of the Karth Family, from before the crash.") %>
+    <%= image_tag("content/GWMemorial_99.jpg", alt: "Photo of the Karth Family, from before the crash.") %>
     <p><strong>It's too late for AnnaLeah and Mary, but with help from people like you we will save lives.</strong></p>
     <p>~~The Karth Family</p>
   </section>
