--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = include_gon(init: true)
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
-    %script{:src => "https://js.braintreegateway.com/v2/braintree.js"}
+    %script{src: "https://js.braintreegateway.com/js/beta/braintree-hosted-fields-beta.18.js"}
     = csrf_meta_tags
     %meta{:content => "width=device-width", :name => "viewport"}/
     %link{:href => "https://fonts.googleapis.com/css?family=Signika:400,600", :rel => "stylesheet", :type => "text/css"}/
