Added link to annaleahmary.com

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,6 +37,9 @@
         |
         %a#reveal-terms-of-use{ href: "#terms-of-use", title: "Show Terms of Use" }
           Terms of Use
+      %p
+        %a{ href: "http://annaleahmary.com", title: "AnnaLeahMary.com" , target: "_blank"  }
+          AnnaLeahMary.com
     :javascript
       displayDonations();
     %div.return#returntotop
