--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -1,25 +1,25 @@
 %h2 Please Help: Donate Here
 %a(href="#" title="Donation Form")
-  = bootstrap_form_for(@giver, html: {id: "payment-form"}) do |f|
-    = render "shared/messages"
-    %fieldset
-      = f.text_field :first_name, label: "First Name"
-      = f.text_field :last_name, label: "Last Name"
-      = f.text_field :address, label: "Street Address"
-      = f.text_field :city, label: "City"
-      = f.text_field :state, label: "State"
-      = f.text_field :zip, label: "Zip"
-      = f.email_field :email, label: "Email Address"
-      = f.text_field :message, label: "Message (optional)"
-      = f.text_field :amount, label: "Amount of donation"
-      .form-group
+= bootstrap_form_for(@giver, html: {id: "payment-form"}) do |f|
+  = render "shared/messages"
+  %fieldset<
+    = f.text_field :first_name, label: "First Name", placeholder: "Personal Name"
+    = f.text_field :last_name, label: "Last Name", placeholder: "LastName"
+    = f.text_field :address, label: "Street Address", placeholder: "123 Example Street", size: 44
+    = f.text_field :city, label: "City", placeholder: "City Name", size: 28
+    = f.text_field :state, label: "State", size: 3, maxlength: 3, placeholder: "AA"
+    = f.text_field :zip, label: "Zip/Postal", size: 7, placeholder: "00000"
+    = f.email_field :email, label: "Email Address", placeholder: "Your receipt will be sent here", size: 50
+    = f.number_field :amount, label: "Amount of donation ($ USD)", value: "25.00", step: 5.0
+    .form-group
       = label_tag 'Card number'
       #card-number
-      .form-group
+    .form-group<
       = label_tag 'Cvv number'
-      #cvv
-      .form-group
+      #cvv-number
+    .form-group
       = label_tag 'Expiration Date'
       #expiration-date
-      = f.check_box :mailing_list, label: "Add me to the mailing list"
-      = f.submit "Donate", class: "btn btn-default"
+    = f.check_box :mailing_list, label: "Add me to the mailing list"
+    = f.text_area :message, label: "Message (optional)", size: "38x3", placeholder: "If you'd like to inclde a message with your donation, you can write it here."
+    = f.submit "Donate", class: "btn btn-default"
