Moved paypal button, more robust credit card image selection

--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -22,4 +22,5 @@
       #expiration-date
     = f.check_box :mailing_list, label: "Add me to the mailing list"
     = f.text_area :message, label: "Message (optional)", size: "38x3", placeholder: "If you'd like to inclde a message with your donation, you can write it here."
+    #paypal-button
     = f.submit "Donate", class: "btn btn-default"
