--- a/app/assets/stylesheets/donate.css
+++ b/app/assets/stylesheets/donate.css
@@ -73,6 +73,8 @@ main article.donations div.form-group {
   position:relative;
   white-space: nowrap;
 
+  border-radius: 3px;
+
 }
 main article.donations div.form-group:hover {
   background-color:#ffffdd;
