--- a/app/assets/stylesheets/donate.css
+++ b/app/assets/stylesheets/donate.css
@@ -15,6 +15,7 @@ main article.donations {
   background-color: none;
   background:none;
   box-shadow: none;
+  z-index: 2;
 }
 
 main article.donations section {
@@ -51,6 +52,7 @@ main article.donations section.donate-form {
   margin-bottom: 1em;
   width:98%;
   box-shadow: inset 0 0 7em -2em orange, 5px 5px 15px grey;
+  z-index:3;
 }
 
 main article.donations section.donate-form fieldset {
@@ -74,6 +76,8 @@ main article.donations div.form-group {
   white-space: nowrap;
 
   border-radius: 3px;
+  z-index:4;
+  overflow:visible;
 
 }
 main article.donations div.form-group:hover {
@@ -303,7 +307,19 @@ main article.donations span.help-block {
   color: red;
   font-weight: bolder;
   display:block;
+  position: relative;
+  z-index: 10;
+  background-color:pink;
+  padding:0.2em;
+  font-size:x-small;
 }
+
+main article.donations span.help-block:hover {
+  z-index: 20;
+  /*position: absolute;*/
+  background-color:peachpuff;
+}
+
 
 div.alert-danger {
   font-weight: bolder;
