Added animation overlay to be played when site is processing

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -63,14 +63,14 @@
     </ul>
   </section>
 </article>
-<article>
+<!--<article>
   <section>
     <p>"Comments"</p>
     <p>-- a person</p>
     <p>"Comments"</p>
     <p>-- a person</p>
   </section>
-</article>
+</article>-->
 <article>
   <section>
     <h1>We Can't Do It Alone<br />We Need YOUR Help!</h1>
@@ -96,12 +96,12 @@
     <%= render 'sharing' %>
   </section>
 </article>
-<article class="retractable start-hidden">
+<!--<article class="retractable start-hidden">
   <h1 class="noselect">A Common Question?</h1>
   <section>
     <p>An answer to your common question</p>
   </section>
-</article>
+</article>-->
 <article class="retractable all-hidden" id="disclaimer">
   <section>
     <h1 class="noselect">Disclaimer</h1>
