--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -343,6 +343,34 @@ section.slideshow div.slideshow {
   overflow:visible;
 }
 
+/* Processing... Overlay */
+
+@media only screen {
+  div.overlay {
+    position: fixed;
+    min-width: 500px;
+    min-height: 500px;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left:50%;
+    text-align: center;
+    vertical-align: center;
+    transform: translate(-50%, -50%);
+    background-color: hsla(45,5%,45%,0.5);
+    z-index: 50;
+  }
+
+  div.overlay svg {
+    position: static;
+    margin: auto;
+    z-index: 60;
+    
+  }
+}
+
+
+
 /* Alternate styles that break the donation box out to the side when the window is big enough. */
 
 @media only screen and (min-width: 750px) {
