--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -76,7 +76,7 @@
     <h1>We Can't Do It Alone<br />We Need YOUR Help!</h1>
     <ul>
       <li>Donate today to save lives, prevent injuries, and make the roads safer for all families.</li>
-      <li><strong>AnnaLeah &amp; Mary for Truck Safety</strong> is eligible to receive contributions that may be tax deductible for the donor</li>
+      <li><strong>AnnaLeah &amp; Mary for Truck Safety</strong> is eligible to receive contributions that may be tax deductible for the donor.</li>
       <li>Your donation will help fund research that will save lives!</li>
     </ul>
     <%= image_tag("content/GWMemorial_99.jpg", alt: "Photo of the Karth Family, from before the crash.") %>
