Styling for diabled/invalid button on form submission

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -1,3 +1,10 @@
+<!--[if gte IE 9]>
+  <style type="text/css">
+    .gradient {
+       filter: none;
+    }
+  </style>
+<![endif]-->
 <article>
   <section>
     <%= image_tag("content/truck_rear_underride_guard_cropped.jpg", alt: "Photo of the rear of a truck from the side, showing the metal bars that form the underride guard at the back of the truck.") %>
