--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -22,7 +22,7 @@
     .form-group
       = label_tag 'Expiration Date'
       #expiration-date
-    = f.submit "Donate With Credit Card", class: "btn btn-default gradient"
+    = f.submit "Donate With Credit Card", class: "btn btn-default gradient", id: "donation-form-submit-button"
     %div.paypal-group<
       %p><
         OR
