corrected application.css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,10 +11,10 @@
  * file per style scope.
  *
  *= require_self
- *= normalize
- *= main
- *= rrssb
- *= safety
- *= donate
+ *= require normalize
+ *= require main
+ *= require rrssb
+ *= require safety
+ *= require donate
  *= require_tree .
  */
